--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,48 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <meta name="robots" content="None, Noimageindex, Noarchive" />
+    <!-- Primary Meta Tags -->
+    <title>Your Space - Final project for Start2Impact University</title>
+    <meta
+      name="title"
+      content="Your Space - Final project for Start2Impact University"
+    />
+    <meta
+      name="description"
+      content="This mockup application was created as the final project of the Master in Full Stack Development at start2Impact University.
+Its purpose is to simulate a digital environment for writing and sharing notes between patient and therapist, in order to improve mutual coordination."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta
+      property="og:title"
+      content="Your Space - Final project for Start2Impact University"
+    />
+    <meta
+      property="og:description"
+      content="This mockup application was created as the final project of the Master in Full Stack Development at start2Impact University.
+Its purpose is to simulate a digital environment for writing and sharing notes between patient and therapist, in order to improve mutual coordination."
+    />
+    <meta property="og:image" content="/assets/metatag-img.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta
+      property="twitter:title"
+      content="Your Space - Final project for Start2Impact University"
+    />
+    <meta
+      property="twitter:description"
+      content="This mockup application was created as the final project of the Master in Full Stack Development at start2Impact University.
+Its purpose is to simulate a digital environment for writing and sharing notes between patient and therapist, in order to improve mutual coordination."
+    />
+    <meta property="twitter:image" content="/assets/metatag-img.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
   </head>
   <body class="mat-typography">
     <app-root></app-root>
